--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+
+# Lighting and Reflection Probe Data
+*LightingData*
+*ReflectionProbe*
+
+
+# Mac OS
+*.DS_Store*
